<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?android:listPreferredItemHeightLarge"
    android:clickable="true"
    android:foreground="?android:selectableItemBackground"
    android:gravity="center_vertical"
    android:minHeight="?android:listPreferredItemHeightLarge"
    android:paddingEnd="@dimen/padding_normal"
    android:paddingRight="@dimen/padding_normal">

    <a2ndrade.explore.ui.widget.CircularImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_bounds"
        android:layout_height="@dimen/avatar_bounds"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="@dimen/avatar_margin"
        android:layout_marginStart="@dimen/avatar_margin"
        android:padding="@dimen/avatar_padding"
        android:src="@drawable/avatar_placeholder" />

    <TextView
        android:id="@+id/name"
        style="@style/Widget.Explore.ListItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/avatar"
        tools:text="@string/tools_placeholder_title" />

    <TextView
        android:id="@+id/login"
        style="@style/Widget.Explore.ListItem.SecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_toLeftOf="@+id/follow"
        android:layout_toRightOf="@+id/avatar"
        tools:text="@string/tools_placeholder_description" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/follow"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/name"
        android:text="@string/user_follow" />

</RelativeLayout>